database/k8/admin-flask-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    name: adminflask
  name: adminflask
spec:
  progressDeadlineSeconds: 2147483647
  replicas: 2
  selector:
    matchLabels:
      app: adminflask
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: adminflask
    spec:
      containers:
        - env:
            - name: FLASK_ENV
              value: development
            - name: APP_SETTINGS
              value: project.config.DevelopmentConfig
            - name: POSTGRES_USER
              valueFrom:
                secretKeyRef:
                  key: user
                  name: postgres-credentials
            - name: POSTGRES_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: password
                  name: postgres-credentials
            - name: DATABASE_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: admin_pass
                  name: postgres-credentials
          image: jagar2/admin_flask_server:2.0.5
          imagePullPolicy: Always
          name: adminflask
          resources:
            limits:
              memory: 12Gi
              cpu: 4
            requests:
              memory: 6Gi
              cpu: 2
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      imagePullSecrets:
        - name: regcred
