database/k8/postgres-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    name: database
  name: postgres-josh # POSTGRES_NAME
spec:
  progressDeadlineSeconds: 2147483647
  replicas: 1
  selector:
    matchLabels:
      service: postgres
  template:
    metadata:
      creationTimestamp: null
      labels:
        service: postgres
    spec:
      containers:
        - name: postgres
          image: jagar2/grade_database:latest #POSTGRES_CONTAINER
          imagePullPolicy: Always
          resources:
            limits:
              memory: 16Gi #POSTGRES_MEM_MAX
              cpu: 4 #POSTGRES_CPU_MAX
            requests:
              memory: 8Gi #POSGRES_MEM_MIN
              cpu: 1 #POSTGRES_CPU_MIN
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-volume-mount
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
        - name: postgres-volume-mount
          persistentVolumeClaim:
            claimName: postgres-pvc-josh #POSTGRES_PVC
      imagePullSecrets:
        - name: regcred
