database/k8/student-flask-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    name: studentflask
  name: studentflask
spec:
  progressDeadlineSeconds: 2147483647
  replicas: 12
  selector:
    matchLabels:
      app: studentflask
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: studentflask
    spec:
      containers:
        - env:
            - name: FLASK_ENV
              value: development
            - name: APP_SETTINGS
              value: project.config.DevelopmentConfig
            - name: POSTGRES_USER
              valueFrom:
                secretKeyRef:
                  key: user
                  name: postgres-credentials
            - name: POSTGRES_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: password
                  name: postgres-credentials
            - name: DATABASE_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: student_pass
                  name: postgres-credentials
          image: jagar2/student_flask_server:4.0.0
          #2.1.4
          imagePullPolicy: Always
          name: studentflask
          resources:
            limits:
              memory: 16Gi
              cpu: 16
            requests:
              memory: 8Gi
              cpu: 8
          # livenessProbe:
          #   httpGet:
          #     path: /health
          #     port: 80
          #   initialDelaySeconds: 300
          #   periodSeconds: 60
          #   timeoutSeconds: 30
          # readinessProbe:
          #   httpGet:
          #     path: /ready
          #     port: 80
          #   initialDelaySeconds: 300
          #   periodSeconds: 60
          #   timeoutSeconds: 30
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      imagePullSecrets:
        - name: regcred
