database/k8/postgres-service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  labels:
    service: postgres
spec:
  selector:
    service: postgres
  type: ClusterIP
  ports:
    - port: 5432 #POSTGRES_PORT
      targetPort: 5432 # The port the container is listening on
