database/k8/admin-server-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: haproxy
  name: admin-ingress
spec:
  rules:
    - host: engr131-admin-grader.nrp-nautilus.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: admin-flask-service
                port:
                  number: 5100
          - path: /logout
            pathType: Prefix
            backend:
              service:
                name: admin-flask-service
                port:
                  number: 5100
          - path: /login
            pathType: Prefix
            backend:
              service:
                name: admin-flask-service
                port:
                  number: 5100
          - path: /upload_assignment
            pathType: Prefix
            backend:
              service:
                name: admin-flask-service
                port:
                  number: 5100
          - path: /upload_score
            pathType: Prefix
            backend:
              service:
                name: admin-flask-service
                port:
                  number: 5100
          - path: /upload_students
            pathType: Prefix
            backend:
              service:
                name: admin-flask-service
                port:
                  number: 5100
  tls:
    - hosts:
        - engr131-admin-grader.nrp-nautilus.io
